# practice_repos

./: CMakeLists.txt  Peak.h  Practice_Project.sln  Practice_Project.vcxproj.filters  Pyramid.cpp  Pyramid.h  README.md  README.txt  Shape.cpp  Shape.h  main_prog.cpp
Debug/: Practice_Project.ilk
Practice_Project/: Peak.cpp  Peak.h  Practice_Project.vcxproj  Prizma.cpp  Prizma.h  Pyramid.cpp  Pyramid.h  Shape.cpp  Shape.h  main_prog.cpp  prizma.cpp
Practice_Project/Debug/: vc142.idb
Practice_Project/Debug/Practice_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Practice_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
geometry/: Peak.cpp  Peak.h  Shape.cpp  Shape.h
geometry/figures/: Cube.cpp  Cube.h  Prizm.cpp  Prizm.h  Pyramid.cpp  Pyramid.h  parallelepiped.cpp  parallelepiped.h
